# ilp-reader

./: .editorconfig  .gitignore  .travis.yml  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.py  tox.ini
src/ilpreader/: __init__.py
tests/: test_ilpreader.py
tests/data/pixel-classification-0001/: pixel-classification.ilp
