[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.isort]
# Black-compatible settings.
multi-line-output = 3
include-trailing-comma = true
force-grid-wrap = 0
use-parentheses = true
line-length = 88

[tool.setuptools_scm]
